# Mobile-University-Recommendation-App-

./: README.md
MobileApp/app/: build.gradle.kts
MobileApp/app/src/main/: AndroidManifest.xml
MobileApp/app/src/main/res/drawable/: bg_button_selector.xml  bg_detail_outline.xml  bg_linered.xml  bg_pill_inner.xml  bg_pill_outer.xml  bg_red.xml  button_rounded.xml  button_rounded_facebook.xml  button_rounded_google.xml  button_rounded_login.xml  button_rounded_white.xml  cell_row_bg.xml  edittext_bg.xml  orange_bg_corner_left.xml  rounded_img.xml
MobileApp/app/src/main/res/layout/: activity_admission_apt.xml  activity_admission_hsa.xml  activity_admission_method_intl_cert.xml  activity_admission_method_thpt.xml  activity_admission_policy.xml  activity_admission_spt.xml  activity_admission_tsa.xml  activity_chuongtrinhdaotao.xml  activity_clb.xml  activity_cocautochuc.xml  activity_cosovatchat.xml  activity_employment_stats.xml  activity_faq.xml  activity_fee.xml  activity_fee_detail.xml  activity_hoatdongsinhvien.xml  activity_hocbong.xml  activity_ketquaxettuyen.xml  activity_login.xml  activity_mohinhdaotao.xml  (+58 more)
RAG system/: app.py  index.html  pyproject.toml  requirements.txt  start.sh
RAG system/src/config/: config.py
RAG system/src/document_ingestion/: document_processor.py
RAG system/src/graph_builder/: graph_builder.py
RAG system/src/node/: nodes.py
RAG system/src/retrieval_enhancer/: query_enhancer.py
RAG system/src/state/: rag_state.py
RAG system/src/vectorstore/: vectorstore.py
RAG system/vectorstore/faiss_index/: index.faiss  index.pkl
(+131 files in other folders)
